# quantum_computing_project

./: .buildinfo  .coveragerc  .gitignore  CODEOWNERS  Gate.cs  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  qcp.algorithms.html  qcp.cli.html  qcp.gui.components.grovers.html  qcp.gui.components.html  qcp.gui.components.phase_estimation.html  qcp.gui.components.sudoku.html  qcp.gui.html  qcp.html  qcp.matrices.html  qcp.ui.components.html  qcp.ui.html  qcp.ui.widgets.html  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  setup.py  test-requirements.in  test-requirements.txt  tests.html  tests.matrices.html  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  sphinx_docs_to_gh_pages.yaml  tox.yml
_modules/: index.html
_modules/qcp/: gates.html  grovers_algorithm.html  main.html  register.html  (+1 more)
_sources/: qcp.rst.txt  qcp.ui.components.rst.txt  qcp.ui.widgets.rst.txt
docs/: Makefile  index.md
qcp/: Matrix.py  PhaseEstimation.py  Phase_Estimation.py  QMatrices.py  QRegister.py  StateVector.py  __init__.py  cli.py  constants.py  consts.py  gates.py  grovers_algorithm.py  main.py  matrix.py  mymatrix.py  oracle.py  phase_estimation.py  register.py  square_matrix.py  sudoku.py  tensor_product.py
source/: modules.html
src/: constants.py  gates.py  tensor_product.py
tests/: __init__.py  test_cli.py  test_gates.py  test_grovers_algorithm.py  test_helpers.py  test_main.py  test_register.py  test_tensor_product.py
ui/: .gitignore  form.ui  main_window.py
(+132 files in other folders)
