[metadata]
license_file = LICENSE.md
name = quantum_computing_project
author = Tiernan8r
author_email = tiernan8r@pm.me
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python

[bdist_wheel]
universal=0 # don't build for python2, only python3

[tool:pytest]

[mypy]

[flake8]
exclude = .git,__pycache__,.tox,.eggs,*.egg,./venv
filename =
    *.py,

