# Copyright 2022 Tiernan8r
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[metadata]
license_file = LICENSE.md
name = quantum_computing_project
author = Tiernan8r
author_email = tiernan8r@pm.me
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python

[bdist_wheel]
universal=0 # don't build for python2, only python3

[tool:pytest]

[mypy]

[flake8]
exclude = .git,__pycache__,.tox,.eggs,*.egg,./venv,.qt_for_python
filename =
    *.py,

